day3 first commit

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
    
 </head>
 <body>
+    <!-- top section -->
     <div id="gradient">
     <div  id="topBaground-image">
            <div id="top">
@@ -58,10 +59,10 @@
 
     </div>
 </div>
-   <!-- top section completed -->
+   <!-- services-section -->
 
         <div id="services" >
-
+         <!-- first row -->
             <div id="first-row">
                 
             <div>
@@ -109,7 +110,53 @@
             </div>
         </div>
 
+     </div>
+
+     <!-- second services section -->
+
+     <div id="gradient-2">
+
+        <div id="container">
+
+            <div id="bg-img">
+            </div>
+            <div id="services-2">
+               <p id="head2"><b>Salon For Men</b></p>
+               <p id="head3">Haircut at ₹199</p>
+               <div id="grid-service">
+                <div>
+                <p class="head4"> <b> Select a service</b></p>
+              </div>
+                <div>
+                    <img src="https://res.cloudinary.com/urbanclap/image/upload/q_auto,f_auto,fl_progressive:steep/t_high_res_portfolio_new/images/growth/luminosity/1665053518870-665674.jpeg" alt="">
+                    <p>Packages</p>
+                </div>              
+                <div> 
+                    <img src="https://res.cloudinary.com/urbanclap/image/upload/q_auto,f_auto,fl_progressive:steep/t_high_res_portfolio_new/images/growth/home-screen/1631190374864-78f3e8.jpeg" alt="">
+                    <p>Haircut for Men & Kid's</p>
+                </div>
+                <div> 
+                    <img src="https://res.cloudinary.com/urbanclap/image/upload/q_auto,f_auto,fl_progressive:steep/t_high_res_portfolio_new/images/growth/home-screen/1631189933595-01692d.png" alt="">
+                    <p>Hair Color</p>
+                </div>
+                <div>
+                    <img src="https://res.cloudinary.com/urbanclap/image/upload/q_auto,f_auto,fl_progressive:steep/t_high_res_portfolio_new/images/growth/home-screen/1631189957304-ea2a7b.png" alt="">
+                    <p>Shave?Beard Grooming</p>
+                </div>
+                <div>
+                    <img src="https://res.cloudinary.com/urbanclap/image/upload/q_auto,f_auto,fl_progressive:steep/t_high_res_portfolio_new/images/growth/home-screen/1631189857376-d49e47.png" alt="">
+                    <p>Detan & Facials</p>
+                </div>
+                <div>
+                    <img src="https://res.cloudinary.com/urbanclap/image/upload/q_auto,f_auto,fl_progressive:steep/t_high_res_portfolio_new/images/growth/home-screen/1631189905841-237b37.png" alt="">
+                    <p>Massage Therapy</p>
+                </div>
+               </div>
+            </div>
+
         </div>
+
+     </div>
 
 
 </body>
