--- a/index.html
+++ b/index.html
@@ -272,10 +272,22 @@
               <div>
                 <p>© 2014-2022 HomeCap Technologies India Pvt.Ltd.</p>
               </div>
-              <div>
-                
+              <div id="socialmedia">
+               <img src="https://i.ibb.co/nBBHGWv/Screenshot-46.png" alt="Screenshot-46" >
+               <img src="https://i.ibb.co/vxd38B1/Screenshot-47.png" alt="Screenshot-47" >
+               <img src="https://i.ibb.co/QfRY86N/Screenshot-48.png" alt="Screenshot-48" >
+                <img src="https://i.ibb.co/HVB9nrs/Screenshot-49.png" alt="Screenshot-49">
+                <img src="https://i.ibb.co/6vyCnhr/Screenshot-51.png" alt="Screenshot-51" >
+               <img src="https://i.ibb.co/txftNQj/Screenshot-52.png" alt="Screenshot-52" >
               </div>
-
+         <div id="store">
+              <div>
+                <img src="https://images.urbanclap.com/image/upload/categories/category_v2/category_7f907eb0.png" alt="">
+              </div>
+              <div>
+                <img src="https://images.urbanclap.com/image/upload/categories/category_v2/category_7f741d10.png" alt="">
+              </div>
+         </div>
             </div>
 
 
@@ -285,3 +297,11 @@
          <div>
 </body>
 </html>
+
+
+<!--  <a href="https://ibb.co/nBBHGWv"><img src="https://i.ibb.co/nBBHGWv/Screenshot-46.png" alt="Screenshot-46" border="0"></a>
+                <a href="https://ibb.co/vxd38B1"><img src="https://i.ibb.co/vxd38B1/Screenshot-47.png" alt="Screenshot-47" border="0"></a>
+                <a href="https://ibb.co/QfRY86N"><img src="https://i.ibb.co/QfRY86N/Screenshot-48.png" alt="Screenshot-48" border="0"></a>
+                <a href="https://ibb.co/HVB9nrs"><img src="https://i.ibb.co/HVB9nrs/Screenshot-49.png" alt="Screenshot-49" border="0"></a>
+                <a href="https://ibb.co/6vyCnhr"><img src="https://i.ibb.co/6vyCnhr/Screenshot-51.png" alt="Screenshot-51" border="0"></a>
+                <a href="https://ibb.co/txftNQj"><img src="https://i.ibb.co/txftNQj/Screenshot-52.png" alt="Screenshot-52" border="0"></a> -->
