--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
 
 
-     let url="./salon prime.html"
+     let url="./salon.html"
      document.querySelector(".services").addEventListener("click",function(){
         window.location.href = url;   
      });
