--- a/salon.html
+++ b/salon.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salon Classic</title>
+    <link rel = "icon" href = 
+    "https://i.ibb.co/x3XVq49/Untitled-design-2.jpg" 
+            type = "image/x-icon">
     <link rel="stylesheet" href="./salon.css">
 </head>
 <body>
@@ -73,7 +76,7 @@
         </div>
 
         <div id="cart">
-
+           <h1 id="carttotal"></h1><span><a href="./payment.html">Make a payment</a></span>
         </div>
 
     </div>
